# rtsoft_summer

./: .example_02-10.cpp.swp  .sift-example.py.swn  CMake.txt  CMakeLists.txt  README.md  example_02-10.cpp  help.txt
HelloWorld/: main.cpp
avg/: run.sh
my_examples2/: .sift-example.py.swo
new_ex/my_examples2/: .sift-example.py.swp
task1/: hello.c
tasks/Canny/: .example_02-10.cpp.swp  CMakeLists.txt  example_02-10.cpp
tasks/rainbow_create/: CMakeLists.txt  rainbow.cpp
test_cmake/: CMakeLists.txt
